tests/baselines/reference/emitter.asyncGenerators.functionExpressions.esnext.errors.txt
tests/cases/conformance/emitter/esnext/asyncGenerators/F4.ts(2,22): error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.


==== tests/cases/conformance/emitter/esnext/asyncGenerators/F1.ts (0 errors) ====
    const f1 = async function * () {
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F2.ts (0 errors) ====
    const f2 = async function * () {
        const x = yield;
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F3.ts (0 errors) ====
    const f3 = async function * () {
        const x = yield 1;
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F4.ts (1 errors) ====
    const f4 = async function * () {
        const x = yield* [1];
                         ~~~
!!! error TS2504: Type must have a '[Symbol.asyncIterator]()' method that returns an async iterator.
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F5.ts (0 errors) ====
    const f5 = async function * () {
        const x = yield* (async function*() { yield 1; })();
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F6.ts (0 errors) ====
    const f6 = async function * () {
        const x = await 1;
    }
==== tests/cases/conformance/emitter/esnext/asyncGenerators/F7.ts (0 errors) ====
    const f7 = async function * () {
        return 1;
    }
    